--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -47,6 +47,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: dev-preflight
+          
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-deny
 
       - run: cargo fmt --all -- --check
       - run: cargo clippy --workspace --all-targets --all-features -- -D warnings
